General debugging, fixed a few bugs
